# openclaw_tools

./: .env.example  .gitignore  LICENSE  PROJECT.md  PROJECT_SUMMARY.md  README.md  check_manifest.cjs  deploy.sh  init-db.bat  install-deps.bat  mcp.json  nginx.conf  package-lock.json  package.json  playwright.config.js  start.bat  start.sh  stop.bat  stop.sh  version.json
backend/: .env  .env.production  check_code.js  check_template.js  check_users.js  create_admin.js  ecosystem.config.js  package-lock.json  package.json  query_template.js  set_admin_via_api.js
client/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
config/: .env  .env.example
database/: init_remote.sql  init_remote_db.js  migrate_client_system_info.js  query_template.js  schema.sql
deploy/: DEPLOY_GUIDE.md  deploy.sh  nginx.conf
docs/: CONFIG_FORMAT.md  GIT_GUIDE.md  LOGIN_GUIDE.md  OPENCLAW_CONFIG_FORMAT.md  SALES_MATERIAL.md  USER_GUIDE.md  api-proxy-usage.md  api-setup-guide.md  config_example.json  openclaw_config_example.json
electron-launcher/: README.md  package-lock.json  package.json
frontend/: .env.development  index.html  package-lock.json  package.json  vite.config.js
launcher/: cleanup.ps1  package-lock.json  package.json
openclaw-launcher/: CHANGELOG.md  launcher.conf  launcher.js  package-lock.json  package.json  terminal-server.js
openclaw-launcher/src-tauri/: Cargo.toml  tauri.conf.json
openclaw-launcher/src-tauri/capabilities/: default.json
openclaw-launcher/src-tauri/src/: gateway.rs  lib.rs
scripts/: build-local-launcher.ps1  (+4 more)
(+192 files in other folders)
