[package]
name = "openclaw-launcher"
version = "1.0.0"
description = "OpenClaw本地启动器 - 轻量级服务"
authors = ["OpenClaw Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
once_cell = "1.19"
chrono = "0.4"
fs_extra = "1.3"
tokio = { version = "1", features = ["process", "io-util", "rt-multi-thread"] }
